# strusUtilities

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING  COPYING  GNUmakefile  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README  README.md  TODO
src/: CMakeLists.txt  GNUmakefile
src/filecrawler/: CMakeLists.txt  fileCrawler.cpp  fileCrawler.hpp  libstrus_filecrawler.cpp
src/parser/: GNUmakefile  lexems.cpp  lexems.hpp  programParser.cpp
src/program/: CMakeLists.txt  GNUmakefile  errorPosition.cpp  errorPosition.hpp  lexems.cpp  lexems.hpp  metadataExpression.cpp  metadataExpression.hpp  patternMatchProgramParser.cpp  patternMatchProgramParser.hpp  programLoader.cpp  programParser.cpp  queryAnalyzerStruct.hpp  queryStruct.cpp  queryStruct.hpp  queryStruct_private.hpp  symbolTable.cpp  symbolTable.hpp  termExpression.cpp  termExpression.hpp
src/strusAlterMetaData/: CMakeLists.txt  GNUmakefile  strusAlterMetaData.cpp
src/strusAnalyze/: CMakeLists.txt  GNUmakefile  strusAnalyze.cpp
src/strusAnalyzePhrase/: CMakeLists.txt  strusAnalyzePhrase.cpp
src/strusAnalyzeQuery/: CMakeLists.txt  strusAnalyzeQuery.cpp
src/strusBuildVectorStorage/: CMakeLists.txt  strusBuildVectorStorage.cpp
src/strusBuildVsm/: CMakeLists.txt  strusBuildVsm.cpp
src/strusCheckStorage/: CMakeLists.txt  strusCheckStorage.cpp
src/strusCreate/: CMakeLists.txt  GNUmakefile  strusCreate.cpp
src/strusCreateVectorStorage/: CMakeLists.txt  strusCreateVectorStorage.cpp
src/strusCreateVsm/: CMakeLists.txt  strusCreateVsm.cpp
src/strusDeleteDocument/: CMakeLists.txt  strusDeleteDocument.cpp
src/strusDestroy/: CMakeLists.txt  GNUmakefile  strusDestroy.cpp
src/strusDumpStatistics/: CMakeLists.txt  GNUmakefile  strusDumpStatistics.cpp
src/strusDumpStorage/: CMakeLists.txt  strusDumpStorage.cpp
src/strusHelp/: CMakeLists.txt  strusHelp.cpp
src/strusInsert/: CMakeLists.txt  GNUmakefile  analyzerMap.cpp  analyzerMap.hpp  checkInsertProcessor.cpp  checkInsertProcessor.hpp  commitQueue.cpp  commitQueue.hpp  docnoAllocator.hpp  docnoAllocatorInterface.hpp  fileCrawler.cpp  fileCrawler.hpp  fileCrawlerInterface.hpp  insertProcessor.cpp  insertProcessor.hpp  keyMapGenProcessor.cpp  keyMapGenProcessor.hpp  strusCheckInsert.cpp  strusGenerateKeyMap.cpp  strusInsert.cpp  thread.hpp
src/strusInspect/: CMakeLists.txt  GNUmakefile  strusInspect.cpp
src/strusInspectVectorStorage/: CMakeLists.txt  strusInspectVectorStorage.cpp
src/strusInspectVsm/: CMakeLists.txt  strusInspectVsm.cpp
src/strusMergeMarkup/: CMakeLists.txt  strusMergeMarkup.cpp
src/strusPatternMatcher/: CMakeLists.txt  strusPatternMatcher.cpp
src/strusPatternSerialize/: CMakeLists.txt  strusPatternSerialize.cpp
src/strusPosTagger/: CMakeLists.txt  strusPosTagger.cpp
src/strusQuery/: CMakeLists.txt  GNUmakefile  strusQuery.cpp
src/strusSegment/: CMakeLists.txt  strusSegment.cpp
src/strusTagMarkup/: CMakeLists.txt  strusTagMarkup.cpp
src/strusUpdateMetaData/: CMakeLists.txt  strusUpdateMetaData.cpp
src/strusUpdateStorage/: CMakeLists.txt  strusUpdateStorage.cpp
src/strusUpdateStorageCalcStatistics/: CMakeLists.txt  strusUpdateStorageCalcStatistics.cpp
src/strusVectorSpace/: CMakeLists.txt  strusVectorSpace.cpp
src/system/: fileio.cpp
src/utils/: CMakeLists.txt  analyzerMap.cpp  documentAnalyzer.cpp  inputStream.cpp  parseFunctionDef.cpp  programOptions.cpp  utils.cpp
tests/scripts/: CMakeLists.txt  ENV.in  execTest.cpp  runTest.sh
tests/scripts/testAnalyzeBase1/: EXP  RUN  doc.ana
tests/scripts/testAnalyzeBindPos1/: EXP
tests/scripts/testAnalyzeConfig1/: EXP  doc.ana
tests/scripts/testAnalyzeConfig2/: EXP  RUN  doc.ana
tests/scripts/testAnalyzeFieldsAndStructures/: EXP  doc.ana
tests/scripts/testAnalyzeJson1/: EXP  RUN  doc.ana  input.json
tests/scripts/testAnalyzeJson2/: EXP  RUN  doc.ana  input.json
tests/scripts/testAnalyzePatternMatch1/: EXP  RUN  doc.ana  doc_pp.ana  input_pp.xml  program.rul  program_pp.rul
tests/scripts/testAnalyzePlain1/: EXP  RUN  doc.ana
tests/scripts/testAnalyzeSubSegmenter1/: EXP  doc.ana  input.xml
tests/scripts/testAnalyzeSubSegmenter2/: EXP  RUN  doc.ana  input.xml
tests/scripts/testAnalyzeSubSegmenter3/: EXP  RUN  doc.ana  input.xml
tests/scripts/testAnalyzeTsv1/: EXP  RUN  doc.ana
tests/scripts/testAnalyzeWithDocType1/: EXP  RUN  doc.map  input.xml
tests/scripts/testInsertBase1/: EXP  RUN  storage.conf
tests/scripts/testInsertWikipedia1/: EXP  RUN  doc.ana
tests/scripts/testInsertWikipedia2/: EXP  RUN  doc.ana
tests/scripts/testInsertWithDocType1/: EXP  RUN  doc.ana  doc.map
tests/scripts/testMarkupDocumentTags/: EXP  RUN
tests/scripts/testMergeMarkup1/: EXP  RUN
tests/scripts/testPattenMatch1/: EXP  RUN
tests/scripts/testPatternMatch1/: EXP  RUN  program.rul
tests/scripts/testPatternMatch2/: EXP
tests/scripts/testPatternMatch3/: EXP  RUN
tests/scripts/testPatternMatch4/: EXP  input.xml  program.rul
tests/scripts/testPatternMatchEditDist2/: EXP  RUN  input.txt  program.rul
tests/scripts/testPatternMatchFormatString1/: EXP  RUN  input.xml  program.rul
tests/scripts/testPatternMatchNamesEditDist/: EXP  RUN  createNameRules.pl  names.txt  names1.txt  program.rul  program1.rul
tests/scripts/testPatternMatchNamesInputFromFile/: EXP  RUN  inputlist.txt
tests/scripts/testPatternMatchNamesTextInputFromFile/: EXP  RUN  inputlist.txt  program.rul
tests/scripts/testPatternMatchVariableSequence/: EXP  RUN  input.xml  program.rul
tests/scripts/testPosTagger1/: EXP  POSOUT  RUN
tests/scripts/testQueryWithFormula1/: EXP  RUN  doc.ana  query.ana  query.prg  storage.conf
tests/scripts/testQueryWithRestriction1/: EXP  RUN  continents.txt  doc.ana  query.ana  query.prg  storage.conf
tests/scripts/testSimpleQuery1/: EXP  RUN  doc.ana  query.ana  query.prg
tests/scripts/testSimpleQuery2/: EXP  RUN  query.ana  query.prg
tests/scripts/testSummarization1/: EXP  RUN  doc.ana  query.ana  query.prg
tests/scripts/testTestFramework1/: EXP
(+113 files in other folders)
