cmake_minimum_required(VERSION 2.8 FATAL_ERROR )

add_subdirectory( utils )
add_subdirectory( filecrawler )
add_subdirectory( program )
add_subdirectory( strusAlterMetaData )
add_subdirectory( strusAnalyze )
add_subdirectory( strusAnalyzePhrase )
add_subdirectory( strusAnalyzeQuery )
add_subdirectory( strusSegment )
add_subdirectory( strusCreate )
add_subdirectory( strusDestroy )
add_subdirectory( strusDumpStatistics )
add_subdirectory( strusInsert )
add_subdirectory( strusInspect )
add_subdirectory( strusQuery )
add_subdirectory( strusCheckStorage )
add_subdirectory( strusDumpStorage )
add_subdirectory( strusUpdateStorage )
add_subdirectory( strusUpdateStorageCalcStatistics )
add_subdirectory( strusDeleteDocument )
add_subdirectory( strusCreateVectorStorage )
add_subdirectory( strusInspectVectorStorage )
add_subdirectory( strusPatternMatcher )
add_subdirectory( strusPatternSerialize )
add_subdirectory( strusPosTagger )
# add_subdirectory( strusTagMarkup )
add_subdirectory( strusHelp )

